app/assets/css/bits/popovers.css
.bit-popover-trigger {
  cursor: pointer;
  border: none;
  background: none;
}

.bit-popover-content {
  border-radius: 0.5rem;
  padding: 2rem;
  max-width: calc(100vw - 20%);
  max-height: calc(100vh - 20%);

  .label {
    font-size: 1.5rem;
    font-weight: 500;
    margin: 1rem 0;
    text-align: center;
  }

  .close {
    background: none;
    border: none;
    color: var(--site-black);
    font-weight: 600;
    font-size: 1.5rem;
    cursor: pointer;
    position: absolute;
    right: 0.3rem;
    top: 0.2rem;
  }

  .screen_reader:not(:focus):not(:active) {
    clip-path: inset(50%);
    clip: rect(0 0 0 0);
    height: 1px;
    overflow: hidden;
    position: absolute;
    white-space: nowrap;
    width: 1px;
  }
}

.bit-popover-screen {
  background-color: var(--site-black);
  border-radius: 1.5rem;
  padding: 1rem;

  :where(figure) {
    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 1rem;
  }

  :where(figcaption) {
    color: var(--site-white);
    font-size: 1.2rem;
    text-align: center;
  }

  :where(img) {
    border-radius: 0.5rem;
  }

  .brand {
    display: flex;
    justify-content: center;
  }
}

